--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "strict": true,
-    "module": "ES2020",
+    "module": "CommonJS",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": false,
     "target": "ES2022",
     "sourceMap": true,
     "outDir": "./dist",
@@ -20,8 +20,8 @@
     "noFallthroughCasesInSwitch": false,
     "moduleResolution": "Node",
     "paths": {
-      "@module/*": [
-        "src/module/*"
+      "@src/*": [
+        "./src/*"
       ]
     }
   }
