--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "db:up": "docker compose --file docker-compose.dev.yml --project-name \"fin-diary\" up -d",
+    "db:down": "docker compose --file docker-compose.dev.yml --project-name \"fin-diary\" down"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -48,6 +50,7 @@
     "husky": "^8.0.3",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
+    "prisma": "^5.1.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
