--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.10",
+    "@nestjs/typeorm": "^10.0.2",
     "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -38,7 +39,8 @@
     "joi": "^17.9.2",
     "lint-staged": "^14.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
