--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     volumes:
-      - fin-diary.volume:/var/lib/postgresql/data
+      - .docker/postgres:/var/lib/postgresql/data
 
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_PASSWORD}" ]
@@ -23,9 +23,6 @@ services:
 
     networks:
       - fin-diary.network
-
-volumes:
-  fin-diary.volume:
 
 networks:
   fin-diary.network:
